--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>ATAGtag-one-api by kozmoz</title>
+
+    <title>ATAG One API</title>
+    <meta http-equiv="Content-Language" content="en"/>
+    <meta name="description" content="Get diagnostic data from your ATAG One."/>
+
 </head>
 
 <body>
@@ -18,6 +24,8 @@
     <div class="inner">
 
         <header>
+            <img src="images/atag-one-device.png" width="69" height="70" alt="" title="ATAG One thermostat"/>
+
             <h1>ATAG One API</h1>
             <h2>Get diagnostic data from your ATAG One</h2>
         </header>
@@ -131,15 +139,32 @@ $ java atag-one.jar -e user@gmail.com -p p6ssw0rd
 </pre>
 
             <h3>
-                <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support
-                or Contact</h3>
+                <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+                Support or Contact
+            </h3>
 
             <p>Having trouble? <a href="http://juur.link/contact/" target="_blank">Contact me</a>,
                 or <a href="https://github.com/kozmoz/atag-one-api/issues/new" target="_blank">file an issue on GitHub</a>.</p>
 
+
+            <h3>
+                <a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+                Disclaimer
+            </h3>
+
+            <p>
+                All of the trademarks used are the property of their respective owners.
+                <br/>
+                This project is not affiliated with Atag, the manufacturer of the ATAG One thermostat.
+                <br/>
+                The software is provided "as is", without warranty of any kind.
+            </p>
+
         </section>
 
         <footer>
+            <img src="images/atag-one-logo.png" width="89" height="13" alt="ATAG One"/>
+
             This project is maintained by <a href="https://github.com/kozmoz">Rob Juurlink</a><br>
             Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.
         </footer>
