Fix download link

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
 </pre>
 
             <p>
-                Download <a href="todo" download="atag-one.jar">atag-one.jar</a>, open a terminal and start <code>atag-one</code> with the user
+                Download <a href="https://github.com/kozmoz/atag-one-api/zipball/master">atag-one .zip</a>, open a terminal and start
+                <code>atag-one</code> with the user
                 credentials specified (emailaddress and password):
             </p>
 
 <pre>
 $ cd ~/Downloads/
-$ java atag-one.jar -e user@gmail.com -p p6ssw0rd
+$ java -jar atag-one.jar -e user@gmail.com -p p6ssw0rd
 {
     "deviceId": "6808-1401-3109_15-30-001-123",
     "deviceAlias": "CV-ketel",
