--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
 </pre>
 
             <p>
-                Download <a href="https://github.com/kozmoz/atag-one-api/zipball/master">atag-one .zip</a>, open a terminal and start
+                Download <a href="https://github.com/kozmoz/atag-one-api/releases/download/v1-0-0/atag-one.jar" download="atag-one.jar">atag-one.jar</a>, open a terminal and start
                 <code>atag-one</code> with the user
                 credentials specified (emailaddress and password):
             </p>
