--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
 
 <pre>
 $ cd ~/Downloads/
-$ java -jar atag-one.jar -e user@gmail.com -p p6ssw0rd
+$ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd
 {
     "deviceId": "6808-1401-3109_15-30-001-123",
     "deviceAlias": "CV-ketel",
