Fix Debian install code

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>Installation for Debian 8 Jessie:</p>
 
 <pre>
-$ sudo apt-get update && apt-get -y install default-jdk
+$ sudo apt-get update && sudo apt-get -y install default-jdk
 </pre>
             </div>
 
