Set room temperature added

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
 </pre>
 
             <p>
-                Download <a href="https://github.com/kozmoz/atag-one-api/releases/download/v1-0-0/atag-one.jar" download="atag-one.jar">atag-one.jar</a>, open a terminal and start
-                <code>atag-one</code> with the user
-                credentials specified (emailaddress and password):
+                Download
+                <a href="https://github.com/kozmoz/atag-one-api/releases/download/v1-1-0/atag-one.jar" download="atag-one.jar">atag-one.jar</a>,
+                open a terminal and start <code>atag-one</code> with the user credentials specified (email address and password):
             </p>
 
 <pre>
@@ -137,6 +137,20 @@ $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd
     "chWaterPressure": 1.5,
     "chReturnTemperature": 18.1
 }
+</pre>
+
+            <h3>
+                <a id="advanced" class="anchor" href="#advanced" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+                Advanced
+            </h3>
+
+            <p>
+                To set the room temperature to 20.5 degrees celsius:
+            </p>
+
+<pre>
+$ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd \
+    --set 20.5
 </pre>
 
             <h3>
