Command response added in the example

--- a/index.html
+++ b/index.html
@@ -145,12 +145,14 @@ $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd
             </h3>
 
             <p>
-                To set the room temperature to 20.5 degrees celsius:
+                To set the room temperature to 20.5 degrees celsius. <br />
+                The response of the call is 18.6, which is the current room temperature.
             </p>
 
 <pre>
 $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd \
     --set 20.5
+18.6
 </pre>
 
             <h3>
