--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="ATAG One thermostat API"/>
     <meta property="og:description" content="Get diagnostic data and set the temperature through the ATAG One thermostat portal."/>
-    <meta property="og:image" content="atag-one-website-logo.png"/>
+    <meta property="og:image:url" content="images/atag-one-website-logo.png"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:image:type" content="image/png"/>
     <meta property="og:image:width" content="1290"/>
@@ -36,7 +36,6 @@
 
         <header>
             <img src="images/atag-one-device.png" width="69" height="70" alt="" title="ATAG One thermostat"/>
-            <img src="images/atag-one-website-logo.png" width="69" height="70" alt="" title="ATAG One thermostat"/>
 
             <h1>ATAG One API</h1>
             <h2>Get diagnostic data from your ATAG One</h2>
