Update image to match Facebook image ratio

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     <meta property="og:url" content="http://atag.one"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="ATAG One thermostat API"/>
-    <meta property="og:description" content="Get diagnostic data and set the temperature through the ATAG One thermostat portal."/>
-    <meta property="og:image:url" content="images/atag-one-website-logo.png"/>
+    <meta property="og:description"
+          content="Get diagnostic data and set the temperature through the ATAG One thermostat portal with just one simple command."/>
+    <meta property="og:image:url" content="http://atag.one/images/atag-one-website-logo-v2.png"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:image:type" content="image/png"/>
-    <meta property="og:image:width" content="1290"/>
-    <meta property="og:image:height" content="930"/>
+    <meta property="og:image:width" content="1563"/>
+    <meta property="og:image:height" content="912"/>
 
 </head>
 
