--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="ATAG One thermostat API"/>
     <meta property="og:description"
           content="Get diagnostic data and set the temperature through the ATAG One thermostat portal with just one simple command."/>
-    <meta property="og:image:url" content="http://atag.one/images/atag-one-website-logo-v3.png"/>
+    <meta property="og:image" content="http://atag.one/images/atag-one-website-logo-v3.png"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:image:type" content="image/png"/>
     <meta property="og:image:width" content="1173"/>
