Fix Facebook image - 5?

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </h3>
 
             <p>
-                Get all diagnostic data from your <a href="https://www.atag-one.com" target="_blank">ATAG One thermostat</a> with just one simple
+                Get all diagnostic data from your <a href="https://atag-one.com" target="_blank">ATAG One thermostat</a> with just one simple
                 command.
             </p>
             <p>
