Update website in response to latest code changes; work in progress

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-            <a href="https://github.com/kozmoz/atag-one-api/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-            <a href="https://github.com/kozmoz/atag-one-api/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-            <a href="https://github.com/kozmoz/atag-one-api" id="view-on-github" class="button" target="-blank"><span>View on GitHub</span></a>
+            <a href="https://github.com/kozmoz/atag-one-api" id="view-on-github" class="button"
+               target="-blank"><span>View Project on GitHub</span></a>
+            <a href="https://github.com/kozmoz/atag-one-api/releases" id="show-releases" class="button"><span>Show All Releases</span></a>
         </section>
 
         <hr>
@@ -65,22 +65,50 @@
 <pre>
 {
     "deviceId": "6808-1401-3109_15-30-001-123",
-    "deviceAlias": "CV-ketel",
     "latestReportTime": "<span class="bh-now">2015-11-19 13:46:44</span>",
-    "connectedTo": "BCU",
-    "burningHours": 41.4,
-    "boilerHeatingFor": "-",
-    "flameStatus": false,
-    "roomTemperature": 18.1,
-    "outsideTemperature": 13,
-    "dhwSetpoint": 60,
-    "dhwWaterTemperature": 32.3,
-    "chSetpoint": 1.4,
-    "chWaterTemperature": 18.1,
-    "chWaterPressure": 1.5,
-    "chReturnTemperature": 18.1
+    burningHours: 283.91,
+    roomTemperature: 19.9,
+    outsideTemperature: 4.4,
+    dhwSetpoint: 60.0,
+    dhwWaterTemperature: 46.8,
+    chSetpoint: 42.3,
+    chWaterTemperature: 46.6,
+    chWaterPressure: 1.6,
+    chReturnTemperature: 40.3,
+    targetTemperature: 20.0,
+    deviceStatus: 16385,
+    connectionStatus: 23,
+    deviceErrors: "",
+    boilerErrors: "",
+    dbgOutsideTemp: 22.7,
+    pcbTemp: 26.3,
+    dhwWaterTemp: 46.8,
+    dhwWaterPres: 0.0,
+    boilerStatus: 778,
+    boilerConfig: 772,
+    chTimeToTemp: 0,
+    powerCons: 8796,
+    rssi: 26,
+    current: -10,
+    voltage: 3989,
+    resets: 11,
+    memoryAllocation: 2800,
+    chStatus: 13,
+    chControl_mode: 0,
+    chMode: 1,
+    chModeDuration: 0,
+    chModeTemp: 20.0,
+    dhwStatus: 5,
+    dhwMode: 1,
+    weatherTemp: 4.4,
+    weatherStatus: 1,
+    vacationDuration: 0,
+    extendDuration: 0,
+    fireplaceDuration: 10800
 }
 </pre>
+
+            <!-- Todo: Update in response to code changes. -->
 
             <h3>
                 <a id="quick-start" class="anchor" href="#quick-start" aria-hidden="true"><span class="octicon octicon-link"></span></a>
