--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
 
 
             <p>
-                To show diagnostic data of the thermostat that can be found in the local network:
+                To show diagnostic data of the thermostat found in the local network:
             </p>
 
             <ol>
