--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <title>ATAG One thermostat API</title>
     <meta http-equiv="Content-Language" content="en"/>
-    <meta name="description" content="Get diagnostic data and set the temperature through the ATAG One thermostat portal."/>
+    <meta name="description" content="Get diagnostic data and set the temperature through the ATAG One thermostat controller."/>
 
     <!-- Facebook meta data. -->
     <meta property="og:url" content="http://atag.one"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="ATAG One thermostat API"/>
     <meta property="og:description"
-          content="Get diagnostic data and set the temperature through the ATAG One thermostat portal with just one simple command."/>
+          content="Get diagnostic data and set the temperature through the ATAG One thermostat controller with just one simple command."/>
     <meta property="og:image" content="http://atag.one/images/facebookwebsitelogo.png"/>
     <meta property="og:locale" content="en_US"/>
 
@@ -55,7 +55,7 @@
             </h3>
 
             <p>
-                Get diagnostic data from your <a href="https://atag-one.com" target="_blank">ATAG One thermostat</a> with just one simple
+                Get diagnostic data from your <a href="https://atag-one.com" target="_blank">ATAG One thermostat controller</a> with just one simple
                 command.
             </p>
             <p>
@@ -130,7 +130,7 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
                 <li>Download <code>atag-one.jar</code> from the <a href="https://github.com/kozmoz/atag-one-api/releases/">GitHub Releases</a> page
                 </li>
                 <li>Open a terminal</li>
-                <li>navigate to the downloads folder</li>
+                <li>navigate to the Downloads folder</li>
                 <li>Start <code>atag-one.jar</code> without arguments</li>
             </ol>
 
