Link to project wiki page added

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd
 
 <pre>
 $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd --set 20.5
+18.6
 </pre>
 
             <h3>
@@ -215,7 +216,9 @@ $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd --set 20.5
                 Support or Contact
             </h3>
 
-            <p>Having trouble? <a href="http://juur.link/contact/" target="_blank">Contact me</a>,
+            <p>Having trouble? <br/>
+                Check the <a href="https://github.com/kozmoz/atag-one-api/wiki" target="_blank">project wiki</a>, <a
+                        href="http://juur.link/contact/" target="_blank">Contact me</a>,
                 or <a href="https://github.com/kozmoz/atag-one-api/issues/new" target="_blank">file an issue on GitHub</a>.</p>
 
 
