--- a/index.html
+++ b/index.html
@@ -249,5 +249,22 @@ $ java -jar atag-one.jar --email user@gmail.com --password p6ssw0rd --set 20.5
 <script src="javascripts/jquery-1.11.3/jquery.min.js" type="application/javascript"></script>
 <script src="javascripts/main.js" type="application/javascript"></script>
 
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-90636089-1', 'auto');
+    ga('send', 'pageview');
+</script>
+
 </body>
 </html>
